added some css to try to get main image to flow properly. It didn't work

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,9 +39,9 @@
 		<link rel="stylesheet" href="pwpstyle.css">
 
 	</head>
-	<body>
+	<body class>
 		<div class="container border">
-			<nav id="nav" class="navbar navbar-expand-lg fixed-top navbar-light bg-primary text-white">
+			<nav id="nav" class="navbar navbar-expand-lg fixed-top navbar-light bg-primary">
 				<div class="navbar-header">
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 							  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,6 +51,9 @@
 				</div>
 				<div class="collapse navbar-collapse" id="navbarNav" >
 					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="#top">Home</a>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#about-me">About Me</a>
 						</li>
@@ -68,7 +71,7 @@
 			</nav>
 			<div class="media pt-3">
 				<div class="media-body">
-					<img src="resources/bikeCart.jpg" class="img-fluid bikeCart " alt="bike cart"
+					<img src="resources/bikeCart.jpg" class="img-fluid mx-auto bikeCart" alt="bike cart"
 						  title="Yes, it's a bike attached to a shopping cart">
 				</div>
 			</div>
@@ -96,21 +99,21 @@
 				My name is Daniel Juarez, and I'm an entry-level web developer ready and eager to help your company solve problems, even if that means building a bike-cart. Come get to know me!
 				</p>
 			</div>
-			<div class="work-section container py-2">
+			<div class="work-section container py-2 border border-primary ">
 				<h2 id="my-work">My Work</h2>
 				<div class="row">
-					<div class="card mx-auto" style="width: 17rem;">
-						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
+					<div class="card mx-auto border-0" style="width: 17rem;">
+						<img class="card-img-top img-thumbnail" src="resources/peep-coopers-hawk.jpg" alt="Card image cap">
 						<div class="card-body">
 							<h5 class="card-title">Peep</h5>
-							<p class="card-text">"Peep" is webapp that my group, "Birbs" created during my time attending the
-								CNM Fullstack Web Development program. Using data from the eBirds API, it allows users to keep
+							<p class="card-text">"Peep" is webapp that I created with my peer group, "Birbs" during my time attending the
+								CNM Ingenuity 	Fullstack Web Development program. Using data from the eBirds API, it allows users to keep
 								track of their bird sightings around New Mexico. </p>
 							<a target="_blank" href="https://github.com/deepdivebirbs/peep" class="btn btn-primary">Check It
 								Out!</a>
 						</div>
 					</div>
-					<div class="card mx-auto" style="width: 17rem;">
+					<div class="card mx-auto border-0" style="width: 17rem;">
 						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
 						<div class="card-body">
 							<h5 class="card-title">Peep</h5>
@@ -120,7 +123,7 @@
 							<a href="#" class="btn btn-primary">Check It Out!</a>
 						</div>
 					</div>
-					<div class="card mx-auto" style="width: 17rem;">
+					<div class="card mx-auto border-0" style="width: 17rem;">
 						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
 						<div class="card-body">
 							<h5 class="card-title">Peep</h5>
@@ -130,7 +133,7 @@
 							<a href="#" class="btn btn-primary">Check It Out!</a>
 						</div>
 					</div>
-					<div class="card mx-auto" style="width: 17rem;">
+					<div class="card mx-auto border-0" style="width: 17rem;">
 						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
 						<div class="card-body">
 							<h5 class="card-title">Peep</h5>
