finally got image to re-size properly

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,8 +39,8 @@
 		<link rel="stylesheet" href="pwpstyle.css">
 
 	</head>
-	<body class>
-		<div class="container border">
+	<body>
+		<div class="container">
 			<nav id="nav" class="navbar navbar-expand-lg fixed-top navbar-light bg-primary">
 				<div class="navbar-header">
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -60,7 +60,6 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#my-work">My Work</a>
 						</li>
-						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#contact-me">Contact Me</a>
 						</li>
@@ -71,7 +70,7 @@
 			</nav>
 			<div class="media pt-3">
 				<div class="media-body">
-					<img src="resources/bikeCart.jpg" class="img-fluid mx-auto bikeCart" alt="bike cart"
+					<img src="resources/bikeCart.jpg" class="img-fluid mx-auto bikeCart d-block" alt="bike cart"
 						  title="Yes, it's a bike attached to a shopping cart">
 				</div>
 			</div>
@@ -207,7 +206,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="Link-Section container py-2">
+			<div class="Link-Section container py-2 border border-primary">
 				<h2 id="my-links">My Links</h2>
 				<div class="row">
 					<div class="card mx-auto" style="width: 17rem;">
