added some more images for work section, updated placeholder text

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -86,7 +86,8 @@
 					title="The good one, not the one with Lucas Till"><i>McGyver</i></span>, the crew of and team behind
 					Apollo 13 (who had to figure out how to literally fit a <a
 					href="https://gizmodo.com/this-is-the-actual-hack-that-saved-the-astronauts-of-th-1598385593">square peg
-					in a round hole </a> with supplies available on the spacecraft), and the creator of this bike-cart, (who clearly needed a find a way to carry a lot of stuff around):
+					in a round hole </a> using supplies available on the spacecraft), and the creator of this bike-cart, (who clearly needed a find a way to carry a lot of stuff around):
+				</p>
 				<ol>
 					<li>
 						It is always possible to "improvise, adapt, and overcome"
@@ -95,6 +96,7 @@
 						If it's stupid and it works, it's not stupid
 					</li>
 				</ol>
+				<p>
 				My name is Daniel Juarez, and I'm an entry-level web developer ready and eager to help your company solve problems, even if that means building a bike-cart. Come get to know me!
 				</p>
 			</div>
@@ -102,33 +104,34 @@
 				<h2 id="my-work">My Work</h2>
 				<div class="row">
 					<div class="card mx-auto border-0" style="width: 17rem;">
-						<img class="card-img-top img-thumbnail" src="resources/peep-coopers-hawk.jpg" alt="Card image cap">
+						<img class="card-img-top img-thumbnail" src="resources/peep-coopers-hawk.jpg" alt="Peep">
 						<div class="card-body">
 							<h5 class="card-title">Peep</h5>
 							<p class="card-text">"Peep" is webapp that I created with my peer group, "Birbs" during my time attending the
-								CNM Ingenuity 	Fullstack Web Development program. Using data from the eBirds API, it allows users to keep
-								track of their bird sightings around New Mexico. </p>
+								CNM Ingenuity 	Fullstack Web Development program. Using data from the Cornell Ornithology Lab eBirds API, it allows users to keep
+								track of their bird sightings around New Mexico, and, after creating an account, save their favorite bird species. </p>
 							<a target="_blank" href="https://github.com/deepdivebirbs/peep" class="btn btn-primary">Check It
 								Out!</a>
 						</div>
 					</div>
 					<div class="card mx-auto border-0" style="width: 17rem;">
-						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
+						<img class="card-img-top img-thumbnail" src="resources/truck-check-preview.jpg" alt="Truck-Check-Form">
 						<div class="card-body">
-							<h5 class="card-title">Peep</h5>
-							<p class="card-text">"Peep" is webapp that my group, "Birbs" created during my time attending the
-								CNM Fullstack Web Development program. Using data from the eBirds API, it allows users to keep
-								track of their bird sightings around New Mexico. </p>
-							<a href="#" class="btn btn-primary">Check It Out!</a>
+							<h5 class="card-title">Truck Check Form</h5>
+							<p class="card-text">When I volunteered with a fire department, we had issues with not everything on a
+								the Rescue unit (which is just an ambulance with better PR and lower mileage) getting checked as it should.
+								I created a easier-to-use, less cluttered checklist that fixed that issue and made truck checks faster and more thorough.
+								I also added hundreds of labels to the truck itself so new volunteers could familiarize themselves with where equipment was.
+								<br> This was a simple but functional solution to a major problem.
+							</p>
+							<a target="blank" href="resources/fire.pdf" class="btn btn-primary">Here's the List</a>
 						</div>
 					</div>
 					<div class="card mx-auto border-0" style="width: 17rem;">
 						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
 						<div class="card-body">
-							<h5 class="card-title">Peep</h5>
-							<p class="card-text">"Peep" is webapp that my group, "Birbs" created during my time attending the
-								CNM Fullstack Web Development program. Using data from the eBirds API, it allows users to keep
-								track of their bird sightings around New Mexico. </p>
+							<h5 class="card-title">Prezi</h5>
+							<p class="card-text">Sometimes the problem you need to solve is  </p>
 							<a href="#" class="btn btn-primary">Check It Out!</a>
 						</div>
 					</div>
