added soem more resources

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -131,7 +131,7 @@
 						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
 						<div class="card-body">
 							<h5 class="card-title">Prezi</h5>
-							<p class="card-text">Sometimes the problem you need to solve is  </p>
+							<p class="card-text">Sometimes  </p>
 							<a href="#" class="btn btn-primary">Check It Out!</a>
 						</div>
 					</div>
