finally got my navbar to have white text

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,37 +40,38 @@
 
 	</head>
 	<body>
-		<div class="container">
-			<nav id="nav" class="navbar navbar-expand-lg fixed-top navbar-light bg-primary">
-				<div class="navbar-header">
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-							  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<a class="navbar-brand px-3" href="#">Daniel Juarez, Web Dev</a>
-				</div>
-				<div class="collapse navbar-collapse" id="navbarNav" >
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link" href="#top">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#about-me">About Me</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#my-work">My Work</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#contact-me">Contact Me</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#my-links">My Links</a>
-					</ul>
-				</div>
-			</nav>
-			<div class="media pt-3">
-				<div class="media-body">
-					<img src="resources/bikeCart.jpg" class="img-fluid mx-auto bikeCart d-block" alt="bike cart"
+		<nav id="nav" class="navbar navbar-expand-lg fixed-top navbar-light bg-primary">
+			<div class="navbar-header text-white">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+						  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<a class="navbar-brand px-3 text-white" href="#">Daniel Juarez, Web Dev</a>
+			</div>
+			<div class="collapse navbar-collapse" id="navbarNav" >
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link text-white" href="#top">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-white " href="#about-me">About Me</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-white" href="#my-work">My Work</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-white" href="#contact-me">Contact Me</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-white" href="#my-links">My Links</a>
+				</ul>
+			</div>
+		</nav>
+		<div class="container pt-4">
+
+			<div class="media" >
+				<div class="media-body pt-5">
+					<img src="resources/bikeCart.jpg" class="img-fluid mx-auto bikeCart d-block border border-primary" alt="bike cart"
 						  title="Yes, it's a bike attached to a shopping cart">
 				</div>
 			</div>
@@ -86,7 +87,7 @@
 					title="The good one, not the one with Lucas Till"><i>McGyver</i></span>, the crew of and team behind
 					Apollo 13 (who had to figure out how to literally fit a <a
 					href="https://gizmodo.com/this-is-the-actual-hack-that-saved-the-astronauts-of-th-1598385593">square peg
-					in a round hole </a> using supplies available on the spacecraft), and the creator of this bike-cart, (who clearly needed a find a way to carry a lot of stuff around):
+					in a round hole </a> using supplies available on the spacecraft), and the creator of this bike-cart (who clearly needed a find a way to carry a lot of stuff around):
 				</p>
 				<ol>
 					<li>
@@ -103,7 +104,7 @@
 			<div class="work-section container py-2 border border-primary ">
 				<h2 id="my-work">My Work</h2>
 				<div class="row">
-					<div class="card mx-auto border-0" style="width: 17rem;">
+					<div class="card mx-auto border-0 p2 m2" style="width: 17rem;">
 						<img class="card-img-top img-thumbnail" src="resources/peep-coopers-hawk.jpg" alt="Peep">
 						<div class="card-body">
 							<h5 class="card-title">Peep</h5>
@@ -114,7 +115,7 @@
 								Out!</a>
 						</div>
 					</div>
-					<div class="card mx-auto border-0" style="width: 17rem;">
+					<div class="card mx-auto border-0 p2 m2" style="width: 17rem;">
 						<img class="card-img-top img-thumbnail" src="resources/truck-check-preview.jpg" alt="Truck-Check-Form">
 						<div class="card-body">
 							<h5 class="card-title">Truck Check Form</h5>
@@ -127,15 +128,17 @@
 							<a target="blank" href="resources/fire.pdf" class="btn btn-primary">Here's the List</a>
 						</div>
 					</div>
-					<div class="card mx-auto border-0" style="width: 17rem;">
-						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
+					<div class="card mx-auto border-0 p2 m2" style="width: 17rem;">
+						<img class="card-img-top img-thumbnail" src="resources/web-dev.jpg" alt="Card image cap">
 						<div class="card-body">
-							<h5 class="card-title">Prezi</h5>
-							<p class="card-text">Sometimes  </p>
-							<a href="#" class="btn btn-primary">Check It Out!</a>
+							<h5 class="card-title">My Website</h5>
+							<p class="card-text">Sometimes, the problem is advertising yourself. I created a website to show my future employers (hopefully that's you!) that I have a
+							basic familiarity with Bootstrap CSS 4, Javascript, HTML markup, and vanilla CSS. It has a validated, secured contact form
+								(using Google RECAPTCHA) and a stunning, mostly blue and white theme with a touch of a complementary color.</p>
+							<a href="#top" class="btn btn-primary">Let's Get Recursive!</a>
 						</div>
 					</div>
-					<div class="card mx-auto border-0" style="width: 17rem;">
+					<div class="card mx-auto border-0 p5 m5" style="width: 17rem;">
 						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
 						<div class="card-body">
 							<h5 class="card-title">Peep</h5>
@@ -199,7 +202,7 @@
 					<div class="g-recaptcha" data-sitekey="6LcsCrMUAAAAAFssJDvtZmO9TLtenv_bzKRIioZk"></div>
 
 					<button class="btn sendButton" type="submit">Send</button>
-					<button class="btn resetButton" type="reset">Reset</button>
+					<button class="btn resetButton" title="You found the complementary color!" type="reset">Reset</button>
 				</form>
 
 				<!--empty area for form error/success output-->
