removed in-line styling of cards

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -98,13 +98,13 @@
 					</li>
 				</ol>
 				<p>
-				My name is Daniel Juarez, and I'm an entry-level web developer ready and eager to help your company solve problems, even if that means building a bike-cart. Come get to know me!
+					My name is Daniel Juarez, and I'm an entry-level web developer and former Paramedic ready and eager to help your company solve problems, even if that means building a bike-cart. Come get to know me!
 				</p>
 			</div>
 			<div class="work-section container py-2 border border-primary ">
 				<h2 id="my-work">My Work</h2>
-				<div class="row">
-					<div class="card mx-auto border-0 p2 m2" style="width: 17rem;">
+				<div class="card-deck">
+					<div class="card mx-auto border p2 m2 w-100">
 						<img class="card-img-top img-thumbnail" src="resources/peep-coopers-hawk.jpg" alt="Peep">
 						<div class="card-body">
 							<h5 class="card-title">Peep</h5>
@@ -115,30 +115,30 @@
 								Out!</a>
 						</div>
 					</div>
-					<div class="card mx-auto border-0 p2 m2" style="width: 17rem;">
+					<div class="card mx-auto border p2 m2 w-100">
 						<img class="card-img-top img-thumbnail" src="resources/truck-check-preview.jpg" alt="Truck-Check-Form">
 						<div class="card-body">
 							<h5 class="card-title">Truck Check Form</h5>
-							<p class="card-text">When I volunteered with a fire department, we had issues with not everything on a
-								the Rescue unit (which is just an ambulance with better PR and lower mileage) getting checked as it should.
-								I created a easier-to-use, less cluttered checklist that fixed that issue and made truck checks faster and more thorough.
-								I also added hundreds of labels to the truck itself so new volunteers could familiarize themselves with where equipment was.
-								<br> This was a simple but functional solution to a major problem.
+							<p class="card-text">When I volunteered with a fire department, we had issues with medical equipment on the Rescue unit
+								(which is just an ambulance with better PR and lower mileage) not getting checked as it should.
+								I created a easier-to-use, less cluttered checklist that made truck checks faster and more thorough.
+								I also added hundreds of labels to the truck itself so new volunteers could quickly familiarize themselves with the equipment.
+								<br> This was a simple, but quite functional, solution to a major problem.
 							</p>
-							<a target="blank" href="resources/fire.pdf" class="btn btn-primary">Here's the List</a>
+							<a target="blank" href="resources/fire.pdf" class="btn btn-primary">Here's that List</a>
 						</div>
 					</div>
-					<div class="card mx-auto border-0 p2 m2" style="width: 17rem;">
-						<img class="card-img-top img-thumbnail" src="resources/web-dev.jpg" alt="Card image cap">
+					<div class="card mx-auto border w-100" >
+						<img class="card-img-top img-thumbnail" src="resources/web-dev.jpeg" alt="Card image cap">
 						<div class="card-body">
 							<h5 class="card-title">My Website</h5>
 							<p class="card-text">Sometimes, the problem is advertising yourself. I created a website to show my future employers (hopefully that's you!) that I have a
-							basic familiarity with Bootstrap CSS 4, Javascript, HTML markup, and vanilla CSS. It has a validated, secured contact form
+								basic familiarity with Bootstrap CSS 4, Javascript, HTML markup, and vanilla CSS. It has a validated, secured contact form
 								(using Google RECAPTCHA) and a stunning, mostly blue and white theme with a touch of a complementary color.</p>
 							<a href="#top" class="btn btn-primary">Let's Get Recursive!</a>
 						</div>
 					</div>
-					<div class="card mx-auto border-0 p5 m5" style="width: 17rem;">
+					<div class="card mx-auto border w-100 p-1" >
 						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
 						<div class="card-body">
 							<h5 class="card-title">Peep</h5>
@@ -158,7 +158,6 @@
 						<div class="input-group">
 							<div class="input-group-prepend">
 								<span class="input-group-text"></span>
-								<i class="oi oi-person" title="person" aria-hidden="true"></i>
 							</div>
 							<input type="text" class="form-control" id="Name" name="Name" placeholder="Your Name">
 						</div>
@@ -168,7 +167,6 @@
 						<div class="input-group">
 							<div class="input-group-prepend">
 								<span class="input-group-text"></span>
-								<i class="fa fa-envelop" aria-hidden="true"></i>
 							</div>
 							<input type="email" class="form-control" id="email" name="email" placeholder="You@email.com">
 						</div>
@@ -178,7 +176,6 @@
 						<div class="input-group">
 							<div class="input-group-prepend">
 								<span class="input-group-text"></span>
-								<i class="fa fa-pencil" aria-hidden="true"></i>
 							</div>
 							<input type="text" class="form-control" id="Subject" name="Subject"
 									 placeholder="Subject">
@@ -190,7 +187,6 @@
 						<div class="input-group">
 							<div class="input-group=prepend">
 								<span class="input-group-test"></span>
-								<i class="fa fa-comment" aria-hidden="true"></i>
 							</div>
 							<textarea class="form-control" rows="5" id="Message" name="Message"
 										 placeholder="Your Message, 2000 characters max"></textarea>
@@ -214,16 +210,16 @@
 			</div>
 			<div class="Link-Section container py-2 border border-primary">
 				<h2 id="my-links">My Links</h2>
-				<div class="row">
-					<div class="card mx-auto" style="width: 17rem;">
+				<div class="card-deck">
+					<div class="card mx-auto w-100" >
 						<img class="card-img-top img-thumbnail" src="resources/resume.png" alt="My-Resume">
 						<a target="_blank" href="https://1drv.ms/w/s!Am-acPUAi1VygasBGcV8vvQElMkCYg?e=28yqOo" class="btn btn-primary">My Resume</a>
 					</div>
-					<div class="card mx-auto" style="width: 17rem;">
+					<div class="card mx-auto w-100">
 						<img class="card-img-top img-thumbnail" src="resources/githubLogo.JPG" alt="My-Github">
 						<a target="_blank" href="https://github.com/danielpjuarez" class="btn btn-primary">My Github</a>
 					</div>
-					<div class="card mx-auto" style="width: 17rem;">
+					<div class="card mx-auto w-100">
 						<img class="card-img-top img-thumbnail" src="resources/linkedin.png" alt="LinkedIn">
 						<a target="_blank" href="https://www.linkedin.com/in/danielpjuarez/" class="btn btn-primary">My LinkedIn</a>
 					</div>
