made cards same size and added footer

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -98,7 +98,7 @@
 					</li>
 				</ol>
 				<p>
-					My name is Daniel Juarez, and I'm an entry-level web developer and former Paramedic ready and eager to help your company solve problems, even if that means building a bike-cart. Come get to know me!
+					My name is Daniel Juarez, and I'm an entry-level web developer ready and eager to help your company solve problems, even if that means building a bike-cart. Come get to know me!
 				</p>
 			</div>
 			<div class="work-section container py-2 border border-primary ">
@@ -109,8 +109,10 @@
 						<div class="card-body">
 							<h5 class="card-title">Peep</h5>
 							<p class="card-text">"Peep" is webapp that I created with my peer group, "Birbs" during my time attending the
-								CNM Ingenuity 	Fullstack Web Development program. Using data from the Cornell Ornithology Lab eBirds API, it allows users to keep
-								track of their bird sightings around New Mexico, and, after creating an account, save their favorite bird species. </p>
+								CNM Ingenuity Fullstack Web Development program. Using data from the Cornell Ornithology Lab eBirds API, it allows users to search for bird species without login.
+								After creating an account, users can create a record their bird sightings around New Mexico, and add their favorite bird species to a list. </p>
+						</div>
+						<div class="card-footer">
 							<a target="_blank" href="https://github.com/deepdivebirbs/peep" class="btn btn-primary">Check It
 								Out!</a>
 						</div>
@@ -119,12 +121,15 @@
 						<img class="card-img-top img-thumbnail" src="resources/truck-check-preview.jpg" alt="Truck-Check-Form">
 						<div class="card-body">
 							<h5 class="card-title">Truck Check Form</h5>
-							<p class="card-text">When I volunteered with a fire department, we had issues with medical equipment on the Rescue unit
+							<p class="card-text">When I volunteered with a fire department as a paramedic, we had issues with medical equipment on the Rescue unit
 								(which is just an ambulance with better PR and lower mileage) not getting checked as it should.
 								I created a easier-to-use, less cluttered checklist that made truck checks faster and more thorough.
 								I also added hundreds of labels to the truck itself so new volunteers could quickly familiarize themselves with the equipment.
 								<br> This was a simple, but quite functional, solution to a major problem.
 							</p>
+
+						</div>
+						<div class="card-footer">
 							<a target="blank" href="resources/fire.pdf" class="btn btn-primary">Here's that List</a>
 						</div>
 					</div>
@@ -135,23 +140,27 @@
 							<p class="card-text">Sometimes, the problem is advertising yourself. I created a website to show my future employers (hopefully that's you!) that I have a
 								basic familiarity with Bootstrap CSS 4, Javascript, HTML markup, and vanilla CSS. It has a validated, secured contact form
 								(using Google RECAPTCHA) and a stunning, mostly blue and white theme with a touch of a complementary color.</p>
+						</div>
+						<div class="card-footer">
 							<a href="#top" class="btn btn-primary">Let's Get Recursive!</a>
 						</div>
 					</div>
-					<div class="card mx-auto border w-100 p-1" >
+					<div class="card mx-auto border w-100" >
 						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
 						<div class="card-body">
-							<h5 class="card-title">Peep</h5>
-							<p class="card-text">"Peep" is webapp that my group, "Birbs" created during my time attending the
+							<h5 class="card-title">Burner</h5>
+							<p class="card-text">Burner is a simple Javascript function that that my group, "Birbs" created during my time attending the
 								CNM Fullstack Web Development program. Using data from the eBirds API, it allows users to keep
 								track of their bird sightings around New Mexico. </p>
+						</div>
+						<div class="card-footer">
 							<a href="#" class="btn btn-primary">Check It Out!</a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="contact-section container py-2">
-				<h2 id="contact-me">Contact Me!</h2>
+				<h2 id="contact-me">Contact Me</h2>
 				<form id="daniel-contact-form" action="../php/" method="post">
 					<div class="form-group">
 						<label for="Name">Name*</label>
