added some more resources and one more part for my work section

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -149,12 +149,11 @@
 						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
 						<div class="card-body">
 							<h5 class="card-title">Burner</h5>
-							<p class="card-text">Burner is a simple Javascript function that that my group, "Birbs" created during my time attending the
-								CNM Fullstack Web Development program. Using data from the eBirds API, it allows users to keep
-								track of their bird sightings around New Mexico. </p>
+							<p class="card-text">Burner is a simple Javascript function that I created as part of an exercise during the CNM Fullstack program. It allows you to click a button and delete a paragraph of text.
+							It's not that fancy, but it was a big personal achievement for me, as I was really stuggling with Javascript at the time.</p>
 						</div>
 						<div class="card-footer">
-							<a href="#" class="btn btn-primary">Check It Out!</a>
+							<a href="https://codepen.io/danielpj359/pen/NWKgrzP" class="btn btn-primary">Let's go Burn Something</a>
 						</div>
 					</div>
 				</div>
