--- a/public_html/index.html
+++ b/public_html/index.html
@@ -139,21 +139,21 @@
 							<h5 class="card-title">My Website</h5>
 							<p class="card-text">Sometimes, the problem is advertising yourself. I created a website to show my future employers (hopefully that's you!) that I have a
 								basic familiarity with Bootstrap CSS 4, Javascript, HTML markup, and vanilla CSS. It has a validated, secured contact form
-								(using Google RECAPTCHA) and a stunning, mostly blue and white theme with a touch of a complementary color.</p>
+								(using Google RECAPTCHA) and a stunning, mostly blue and white theme with a touch of a complementary color (singular).</p>
 						</div>
 						<div class="card-footer">
-							<a href="#top" class="btn btn-primary">Let's Get Recursive!</a>
+							<a href="#top" class="btn btn-primary">What Recursion?</a>
 						</div>
 					</div>
 					<div class="card mx-auto border w-100" >
-						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Card image cap">
+						<img class="card-img-top img-thumbnail" src="resources/placeholderBurner.jpg" alt="Burner-Logo">
 						<div class="card-body">
 							<h5 class="card-title">Burner</h5>
 							<p class="card-text">Burner is a simple Javascript function that I created as part of an exercise during the CNM Fullstack program. It allows you to click a button and delete a paragraph of text.
 							It's not that fancy, but it was a big personal achievement for me, as I was really stuggling with Javascript at the time.</p>
 						</div>
 						<div class="card-footer">
-							<a href="https://codepen.io/danielpj359/pen/NWKgrzP" class="btn btn-primary">Let's go Burn Something</a>
+							<a href="https://codepen.io/danielpj359/pen/NWKgrzP" class="btn btn-primary">Let's Burn It</a>
 						</div>
 					</div>
 				</div>
@@ -224,7 +224,7 @@
 						<a target="_blank" href="https://1drv.ms/w/s!Am-acPUAi1VygasBGcV8vvQElMkCYg?e=28yqOo" class="btn btn-primary">My Resume</a>
 					</div>
 					<div class="card mx-auto w-100">
-						<img class="card-img-top img-thumbnail" src="resources/githubLogo.JPG" alt="My-Github">
+						<img class="card-img-top img-thumbnail" src="resources/githubLogo.jpg" alt="My-Github">
 						<a target="_blank" href="https://github.com/danielpjuarez" class="btn btn-primary">My Github</a>
 					</div>
 					<div class="card mx-auto w-100">
