adjusted position of contact form

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -158,7 +158,25 @@
 					</div>
 				</div>
 			</div>
-			<div class="contact-section container py-2">
+			<div class="Link-Section container py-2">
+				<h2 id="my-links">My Links</h2>
+				<div class="card-deck">
+					<div class="card mx-auto w-100" >
+						<a target="_blank" href="https://1drv.ms/w/s!Am-acPUAi1VygasBGcV8vvQElMkCYg?e=28yqOo"><img class="card-img-top img-thumbnail" src="resources/resume.png" alt="My-Resume"> </a>
+						<a target="_blank" href="https://1drv.ms/w/s!Am-acPUAi1VygasBGcV8vvQElMkCYg?e=28yqOo" class="btn btn-primary">My Resume</a>
+					</div>
+					<div class="card mx-auto w-100">
+						<a target="_blank" href="https://github.com/danielpjuarez" ><img class="card-img-top img-thumbnail" src="resources/githubLogo.jpg" alt="My-Github"></a>
+						<a target="_blank" href="https://github.com/danielpjuarez" class="btn btn-primary">My Github</a>
+					</div>
+					<div class="card mx-auto w-100">
+						<a target="_blank" href="https://www.linkedin.com/in/danielpjuarez/"><img class="card-img-top img-thumbnail" src="resources/linkedin.png" alt="LinkedIn"></a>
+						<a target="_blank" href="https://www.linkedin.com/in/danielpjuarez/" class="btn btn-primary">My LinkedIn</a>
+					</div>
+				</div>
+
+			</div>
+			<div class="contact-section container py-2 border border-primary">
 				<h2 id="contact-me">Contact Me</h2>
 				<form id="daniel-contact-form" action="../php/" method="post">
 					<div class="form-group">
@@ -216,24 +234,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="Link-Section container py-2 border border-primary">
-				<h2 id="my-links">My Links</h2>
-				<div class="card-deck">
-					<div class="card mx-auto w-100" >
-						<img class="card-img-top img-thumbnail" src="resources/resume.png" alt="My-Resume">
-						<a target="_blank" href="https://1drv.ms/w/s!Am-acPUAi1VygasBGcV8vvQElMkCYg?e=28yqOo" class="btn btn-primary">My Resume</a>
-					</div>
-					<div class="card mx-auto w-100">
-						<img class="card-img-top img-thumbnail" src="resources/githubLogo.jpg" alt="My-Github">
-						<a target="_blank" href="https://github.com/danielpjuarez" class="btn btn-primary">My Github</a>
-					</div>
-					<div class="card mx-auto w-100">
-						<img class="card-img-top img-thumbnail" src="resources/linkedin.png" alt="LinkedIn">
-						<a target="_blank" href="https://www.linkedin.com/in/danielpjuarez/" class="btn btn-primary">My LinkedIn</a>
-					</div>
-				</div>
 
-			</div>
 
 		</div>
 
