--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,7 +39,7 @@
 		<link rel="stylesheet" href="pwpstyle.css">
 
 	</head>
-	<body>
+	<body class="gradient">
 		<nav id="nav" class="navbar navbar-expand-lg fixed-top navbar-light bg-primary">
 			<div class="navbar-header text-white">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -67,7 +67,7 @@
 				</ul>
 			</div>
 		</nav>
-		<div class="container pt-4">
+		<div class="container py-4">
 
 			<div class="media" >
 				<div class="media-body pt-5">
