--- a/public_html/index.html
+++ b/public_html/index.html
@@ -75,7 +75,7 @@
 						  title="Yes, it's a bike attached to a shopping cart">
 				</div>
 			</div>
-			<div class="me-section container py-2" id="about-me">
+			<div class="me-section container m-2" id="about-me">
 				<h2 >About Me</h2>
 				<p>
 					You may ask, "What does a bike connected to a shopping cart have to do with web development?"
@@ -101,7 +101,7 @@
 					My name is Daniel Juarez, and I'm an entry-level web developer ready and eager to help your company solve problems, even if that means building a bike-cart. Come get to know me!
 				</p>
 			</div>
-			<div class="work-section container py-2 border border-primary ">
+			<div class="work-section container m-2 border border-primary ">
 				<h2 id="my-work">My Work</h2>
 				<div class="card-deck">
 					<div class="card mx-auto border p2 m2 w-100">
@@ -158,7 +158,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="Link-Section container py-2">
+			<div class="Link-Section container m-2">
 				<h2 id="my-links">My Links</h2>
 				<div class="card-deck">
 					<div class="card mx-auto w-100" >
@@ -176,7 +176,7 @@
 				</div>
 
 			</div>
-			<div class="contact-section container py-2 border border-primary">
+			<div class="contact-section container m-2 border border-primary">
 				<h2 id="contact-me">Contact Me</h2>
 				<form id="daniel-contact-form" action="../php/" method="post">
 					<div class="form-group">
